<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_task_count_str">最少&lt;font color=#666666&gt;%1$s&lt;/font&gt;单</string>
    <string name="add_task_price_str">最低出价&lt;font color=#666666&gt;%1$s&lt;/font&gt;元</string>
    <string name="agreement">赚钱了隐私政策协议</string>
    <string name="androidx_camera_default_config_provider" />
    <string name="app_name">赚钱了</string>
    <string name="article_comment">评论：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="article_look">浏览数：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="bag_apply_tip">众包单支持批量接单，实时结算，申请为包工头即可接单，实现流量变现，欢迎有团队的伙伴加入，随时咨询请加微信：%1$s。</string>
    <string name="bag_check_count">审核中：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个</string>
    <string name="bag_check_detail">剩余数：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个 已提交：&lt;font color=#FF4343&gt;%2$s&lt;/font&gt;个</string>
    <string name="bag_count_tip">已完成：%1$s个/剩余:&lt;font color=#FF4343&gt; %2$s&lt;/font&gt;个</string>
    <string name="bag_finish_check_count">已完成：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个</string>
    <string name="bag_rd_tip">任务基数：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个 已完成：&lt;font color=#FF4343&gt;%2$s&lt;/font&gt;个</string>
    <string name="bag_reject_check_count">不合格：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个</string>
    <string name="bag_reward_tip">发布众包单后有认证包工头批量做单，欢迎有一手单、高价单悬赏主发单。随时咨询请加微信：%1$s。</string>
    <string name="bag_task_type">编号：%1$s | &lt;font color=#FF4343&gt;%2$s&lt;/font&gt; | %3$s</string>
    <string name="bag_wx_tip">如有疑问，请联系微信：%1$s。</string>
    <string name="balance_str">可提现金额为%1$s元</string>
    <string name="bid_tip">1、任务赏金已托管到平台，赚钱有保障；\102、请先报名再做任务，否则无赏金；\103、需要打钱、投资的任务一律不能做，否则后果自负；</string>
    <string name="black_punishment_str">拉黑惩罚：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_reason_str">拉黑原因：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_time_str">拉黑时间：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_time_tip">屏蔽时间：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_tip">您的账号[ %1$s]由于【%2$s】已被平台封号，有问题联系客服:</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buy_recommend_tip">2.一次性购买5小时以上推荐，可抵扣&lt;font color=#FF4343&gt;0.5元代金券&lt;/font&gt;</string>
    <string name="buy_top_tip">2.一次性购买5小时以上置顶，可抵扣&lt;font color=#FF4343&gt;1元代金券&lt;/font&gt;</string>
    <string name="cancel_dialog_content">确认要取消该任务吗？</string>
    <string name="card_reward_amount">人均瓜分 &lt;font color=#4B90FF&gt;%1$s&lt;/font&gt;元</string>
    <string name="card_reward_tip">恭喜您，昨日打卡瓜分&lt;font color=#4B90FF&gt;%1$s&lt;/font&gt;元</string>
    <string name="charge_deposit_line_1">保证金最低为1000元，低于1000元任务列表不会展示保证金标识，如因违规被扣除部分或全部保证金，您需要及时充值保证金至1000元及以上，相应保证金标识才会展示，保证金无上限限制，提高保证金可以提高任务的信誉度，便于快速达成任务目标，请根据需要自行调整保证金数额；</string>
    <string name="charge_deposit_line_2">部分金融、理财、支付类任务，必须缴纳保证金后才能发布；</string>
    <string name="charge_deposit_line_3">保证金可申请退还，退还申请需要15天的审核周期，审核通过后及时退还全额保证金，退还时会收取1%的手续费，只有当保证金相关任务全部下架后才能申请保证金退还；</string>
    <string name="charge_deposit_line_4">充值保证金前请仔细阅读保证金服务协议，并确保能够遵守本协议，如有异议请勿充值，一旦充值即表明您已同意并愿意遵守保证金服务协议。</string>
    <string name="charge_deposit_str">同意&lt;font color=#FF4343&gt;《保证金服务协议》&lt;/font&gt;</string>
    <string name="charge_money_tip">平台禁止恶意充值，否则提现时收取20%手续费，解释权归平台所有；</string>
    <string name="charge_tip_line_1">通过信用卡、花呗充值余额不支持提现，其他充值可提现，请确认后充值；</string>
    <string name="charge_tip_line_2">充值无最低额度限制，请根据发布任务的单价和数量确定充值金额，账户余额可提现，但会收取一定的手续费，详情请参阅任务&lt;font color=#FC4549&gt;【发布规则】&lt;/font&gt;和&lt;font color=#FC4549&gt;【用户协议】&lt;/font&gt;；</string>
    <string name="charge_tip_line_3">充值提现手续费说明：非会员收5%，会员收2%；</string>
    <string name="chat_tip_other">您好，客服一直在，有事请直接留言说明情况，看到后会立刻回复并处理</string>
    <string name="clean_data_tip">清空历史做单记录后，以前做过单的可再次做单，该&lt;font color=#FF4343&gt;操作不可逆&lt;/font&gt;，请确认后再操作。</string>
    <string name="common_confirm_1">确认</string>
    <string name="common_dialog_cancel">取消</string>
    <string name="common_dialog_confirm">确定</string>
    <string name="common_dialog_hall">前往大厅</string>
    <string name="common_save">保存</string>
    <string name="company_name">Copyright © 2018 深圳佑辰网络技术有限公司 版权所有</string>
    <string name="company_name_2">© 深圳佑辰网络技术有限公司</string>
    <string name="create_task_step_tip">做单步骤&lt;font color=#FF4343&gt;（建议网址和二维码放在第一步）&lt;/font&gt;</string>
    <string name="create_task_tip">发布提示：\101、本平台禁止发布黄、赌、毒及政策等一切法律禁止内容，详细请参考《发布规则》，如有违反将查封账户,不退还账户余额，敬请周知；\102、悬赏主对自己发布的任务全权负责，禁止发布虚假、诱导性内容，如有违反后果自负</string>
    <string name="crowd_apply_real_tip">众包单通过实名认证的用户才能接单,确定去实名？</string>
    <string name="crowd_apply_tip">你需要申请为包工头，才能报名众包任务，去申请？</string>
    <string name="crowd_real_tip">众包分类是任务包批量做单的方式，设置众包基数（如5单，10单，20单等），接单人报名做单后，一次性可以提交5单，10单，20单等，适用于单量多，需要快速完成的悬赏主。\10发布众包单之后，只有认证通过的包工头才能报名接单，最大化保障做单率。\10众包分类只开放通过实名认证的悬赏</string>
    <string name="crowd_rule">做单通过率计算规则：&lt;font color=#333333&gt;做单通过数/报名单数*100%，&lt;/font&gt;每天更新一次做单通过率数据。</string>
    <string name="crowd_tip">众包分类是任务包批量做单的方式，设置众包基数（如5单，10单，20单等），接单人报名做单后，一次性可以提交5单，10单，20单等，适用于单量多，需要快速完成的悬赏主。\10发布众包单之后，只有认证通过的包工头才能报名接单，最大化保障做单率。</string>
    <string name="daily_reward_tip">今日已发放每日福利奖励 &lt;font color=#FF4343&gt;%1$s元&lt;/font&gt;</string>
    <string name="delete_dialog_content">删除后任务将无法恢复，确定要删除吗？</string>
    <string name="delete_dialog_title">确认删除任务？</string>
    <string name="device_error_tip">请先开启广告标识，再重启应用\10\10 华为手机开启方法：设置-隐私-广告-关闭限制广告跟踪\10 小米手机手机开启方法：设置-隐私保护-管理-特殊应用权限-虚拟身份管理-关闭虚拟身份保护\10 OPPO手机开启方法：设置-其他设置-设备与隐私-设备标识与广告-关闭限制广告跟踪\10 VIVO手机开启方法：设置-安全与隐私-更多安全设置-开启根据兴趣内容推荐</string>
    <string name="do_task_step_tip">做单步骤&lt;font color=#999999&gt;（请参照以下步骤完成做单）&lt;/font&gt;</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">分享返回</string>
    <string name="find_string">发现</string>
    <string name="game_cmp">今日已完成：%1$s/%2$s</string>
    <string name="game_title_tip">每天完成%1$s个91游戏奖1元</string>
    <string name="home">首页</string>
    <string name="know_tip">我知道了,谢谢!</string>
    <string name="login_title">登录赚钱了</string>
    <string name="logout_title">退出登录</string>
    <string name="make_money_string">大厅</string>
    <string name="money_tip">只能&lt;font color=#FF4343&gt;涨价&lt;/font&gt;，不能&lt;font color=#FF4343&gt;降价&lt;/font&gt;，请输入涨价后的价格</string>
    <string name="my_string">我的</string>
    <string name="new_people_reward_tip">今日已发放新人福利奖励 &lt;font color=#FF4343&gt;%1$s元&lt;/font&gt;</string>
    <string name="new_task_rank_tip">&lt;font color=#FF4343&gt;新单榜增加刷新功能，点击右上角我的新单进入刷新，刷新1次，新单榜第一位显示1次。&lt;/font&gt; 新单榜为该项目在本平台首次发布的悬赏单，让接单人能快速找到最新能做的单子。如对上线的新单榜有疑问，请咨询客服。</string>
    <string name="open_app_host_1">open.act</string>
    <string name="open_app_scheme_1">yctapp</string>
    <string name="oppo_appkey">cfac6e3c4fd94b17b1130f0617166b86</string>
    <string name="oppo_secret">68e973bea5824f989614d371f0ab3cd2</string>
    <string name="package_total_money">总计 &lt;font color=#262728&gt;%1$s&lt;/font&gt;元</string>
    <string name="pass_dialog_title">温馨提示</string>
    <string name="pass_dialog_title_tip">确认通过此项验证内容？</string>
    <string name="pay_fast_check">此单极速审核扣除 &lt;font color=#FF4343&gt;%1$s元/单/天&lt;/font&gt;，金额将自动从任务币中扣除，继续上架？ </string>
    <string name="phone_tip">请输入手机号</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="picture_all_audio">All audio</string>
    <string name="picture_audio">Access to system recording permission denied</string>
    <string name="picture_audio_empty">You can use system recordings to record audio</string>
    <string name="picture_audio_error">The audio is corrupted</string>
    <string name="picture_camera">Get system camera permission denied</string>
    <string name="picture_camera_roll">CameraRoll</string>
    <string name="picture_camera_roll_num">%1$s (%2$d)</string>
    <string name="picture_cancel">Cancel</string>
    <string name="picture_choose_limit_seconds">Only videos from %1$ds to %2$ds can be selected</string>
    <string name="picture_choose_max_seconds">You can only select videos within %1$ds</string>
    <string name="picture_choose_min_seconds">You cannot select a video less than %1$ds</string>
    <string name="picture_completed">Completed</string>
    <string name="picture_confirm">Confirm</string>
    <string name="picture_data_exception">Get album data exception…</string>
    <string name="picture_data_null">There no data here…</string>
    <string name="picture_done">Complete</string>
    <string name="picture_done_front_num">%1$d/%2$d Ok</string>
    <string name="picture_empty">you can use your camera to take photos or videos</string>
    <string name="picture_empty_audio_title">No audio file\10</string>
    <string name="picture_empty_title">No video or photos\10</string>
    <string name="picture_error">The picture is corrupted</string>
    <string name="picture_gif_tag">gif</string>
    <string name="picture_go_setting">Go Setting</string>
    <string name="picture_jurisdiction">Read memory card access denied</string>
    <string name="picture_know">I know the</string>
    <string name="picture_long_chart">Long</string>
    <string name="picture_message_audio_max_num">Select up to %1$s Audio</string>
    <string name="picture_message_max_num">Select up to %1$s images</string>
    <string name="public_rule">赚钱了发布规则</string>
    <string name="tt_ad_logo_txt">广告</string>
    <string name="tt_comment_num">%1$s个评分</string>
    <string name="tt_comment_num_backup">(%1$s个评论)</string>
    <string name="tt_video_download_apk">立即下载</string>
    <string name="user_agreement">赚钱了用户协议</string>
</resources>