<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/color_f4f4f6" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/mh_zql_common_white_header_layout"/>
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="77dp" android:layout_height="77dp" android:layout_marginTop="@dimen/dp_40" android:src="@mipmap/icon_logo"/>
    <TextView android:textSize="17sp" android:textColor="#ff999999" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/tv_version_name" android:paddingTop="@dimen/dp_16" android:paddingBottom="34dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <TextView android:textSize="@dimen/sp_15" android:textColor="@color/color_FF333333" android:gravity="center_vertical" android:id="@+id/tv_user_agreement" android:background="@color/white" android:paddingLeft="@dimen/dp_16" android:paddingRight="@dimen/dp_16" android:layout_width="match_parent" android:layout_height="@dimen/dp_48" android:text="@string/user_agreement" android:drawableRight="@mipmap/mh_zql_arrow"/>
    <View android:background="@color/color_eeeeee" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginLeft="@dimen/dp_16" android:layout_marginRight="@dimen/dp_16"/>
    <TextView android:textSize="@dimen/sp_15" android:textColor="@color/color_FF333333" android:gravity="center_vertical" android:id="@+id/tv_user_private" android:background="@color/white" android:paddingLeft="@dimen/dp_16" android:paddingRight="@dimen/dp_16" android:layout_width="match_parent" android:layout_height="@dimen/dp_48" android:text="@string/agreement" android:drawableRight="@mipmap/mh_zql_arrow"/>
    <View android:background="@color/color_eeeeee" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginLeft="@dimen/dp_16" android:layout_marginRight="@dimen/dp_16"/>
    <TextView android:textSize="@dimen/sp_15" android:textColor="@color/color_FF333333" android:gravity="center_vertical" android:id="@+id/tv_publishing_rule" android:background="@color/white" android:paddingLeft="@dimen/dp_16" android:paddingRight="@dimen/dp_16" android:layout_width="match_parent" android:layout_height="@dimen/dp_48" android:text="@string/public_rule" android:drawableRight="@mipmap/mh_zql_arrow"/>
    <LinearLayout android:gravity="center_vertical" android:id="@+id/ll_version_update" android:background="@color/white" android:paddingLeft="@dimen/dp_16" android:paddingRight="@dimen/dp_16" android:layout_width="match_parent" android:layout_height="@dimen/dp_48" android:layout_marginTop="@dimen/dp_20">
        <TextView android:textSize="@dimen/sp_15" android:textColor="@color/color_FF333333" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="新版本更新"/>
        <TextView android:textSize="@dimen/sp_15" android:textColor="@color/color_FF999999" android:gravity="right" android:id="@+id/tv_current_version" android:layout_width="0dp" android:layout_height="wrap_content" android:drawableRight="@mipmap/mh_zql_arrow" android:drawablePadding="@dimen/dp_10" android:layout_weight="1"/>
    </LinearLayout>
    <TextView android:textSize="12sp" android:textColor="#ff999999" android:gravity="bottom|center_vertical|center_horizontal|center" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="@dimen/dp_16" android:text="@string/company_name" android:layout_weight="1"/>
</LinearLayout>
