<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f4f4f6"
    android:orientation="vertical">

    <include layout="@layout/yd_xo_common_white_header_layout" />

    <ImageView
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_40"
        android:src="@mipmap/icon_logo" />

    <TextView
        android:id="@+id/tv_version_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="34dp"
        android:textColor="#ff999999"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/white"
        android:drawableRight="@mipmap/yd_xo_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/user_agreement"
        android:textColor="@color/color_FF333333"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/color_eeeeee" />

    <TextView
        android:id="@+id/tv_user_private"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/white"
        android:drawableRight="@mipmap/yd_xo_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/agreement"
        android:textColor="@color/color_FF333333"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/color_eeeeee" />

    <TextView
        android:id="@+id/tv_publishing_rule"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/white"
        android:drawableRight="@mipmap/yd_xo_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/public_rule"
        android:textColor="@color/color_FF333333"
        android:textSize="@dimen/sp_15"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_version_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="新版本更新"
            android:textColor="@color/color_FF333333"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tv_current_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@mipmap/yd_xo_arrow"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="right"
            android:textColor="@color/color_FF999999"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_weight="1"
        android:gravity="bottom|center_vertical|center_horizontal|center"
        android:text="@string/company_name"
        android:textColor="#ff999999"
        android:textSize="12sp" />
</LinearLayout>
