<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/tt_reward_root" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center" android:id="@+id/tt_full_image_reward_bar" android:layout_width="280dp" android:layout_height="70dp" android:layout_marginLeft="31dp" android:layout_marginTop="91dp">
        <com.bytedance.sdk.openadsdk.core.widget.TTRoundRectImageView android:id="@+id/tt_reward_ad_icon" android:background="@android:color/transparent" android:layout_width="69dp" android:layout_height="69dp" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_toRightOf="@+id/tt_reward_ad_icon" android:layout_toEndOf="@+id/tt_reward_ad_icon">
            <TextView android:textSize="17sp" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/tt_reward_ad_appname" android:layout_width="wrap_content" android:layout_height="27dp" android:layout_marginLeft="14dp" android:maxWidth="176dp" android:text="绝地求生刺激战场长城" android:singleLine="true" android:layout_marginStart="14dp"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14dp" android:layout_marginTop="10dp" android:layout_marginStart="14dp">
                <com.bytedance.sdk.openadsdk.core.widget.TTRatingBar android:layout_gravity="center" android:id="@+id/tt_rb_score" android:layout_width="wrap_content" android:layout_height="14dp"/>
                <TextView android:textSize="13sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@+id/tt_comment_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:maxWidth="72dp" android:text="@string/tt_comment_num" android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <com.bytedance.sdk.openadsdk.component.reward.view.RatioImageView android:id="@+id/tt_ratio_image_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="31dp" android:scaleType="fitXY" android:layout_below="@+id/tt_full_image_reward_bar"/>
    <TextView android:textSize="20sp" android:textColor="@color/tt_white" android:gravity="center" android:id="@+id/tt_full_desc" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="40dp" android:layout_marginTop="30dp" android:layout_marginRight="40dp" android:text="测试vs" android:layout_below="@+id/tt_ratio_image_view"/>
    <TextView android:textSize="15sp" android:textColor="@color/tt_white" android:gravity="center" android:id="@+id/tt_reward_ad_download" android:background="@drawable/tt_reward_video_download_btn_bg" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="40dp" android:layout_marginTop="40dp" android:layout_marginRight="40dp" android:text="@string/tt_video_download_apk" android:layout_below="@+id/tt_full_desc" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    <TextView android:textSize="7sp" android:textColor="#b7b7b7" android:gravity="center" android:id="@+id/tt_ad_logo" android:paddingLeft="2dp" android:layout_width="32dp" android:layout_height="12dp" android:layout_marginLeft="16dp" android:layout_marginBottom="20dp" android:text="@string/tt_ad_logo_txt" android:drawableLeft="@drawable/tt_ad_logo_reward_full" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:drawableStart="@drawable/tt_ad_logo_reward_full" android:paddingStart="2dp"/>
</RelativeLayout>
