<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tt_full_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.bytedance.sdk.openadsdk.component.reward.view.RatioImageView
            android:id="@+id/tt_ratio_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tt_ad_logo"
            android:layout_width="32dp"
            android:layout_height="12dp"
            android:layout_alignBottom="@+id/tt_ratio_image_view"
            android:drawableStart="@drawable/tt_ad_logo_reward_full"
            android:drawableLeft="@drawable/tt_ad_logo_reward_full"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/tt_ad_logo_txt"
            android:textColor="#b7b7b7"
            android:textSize="7sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.bytedance.sdk.openadsdk.core.widget.TTRoundRectImageView
            android:id="@+id/tt_reward_ad_icon_backup"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tt_reward_ad_appname_backup"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:ellipsize="end"
            android:maxWidth="180dp"
            android:singleLine="true"
            android:text="部落战争：皇室冲突"
            android:textColor="#ff333333"
            android:textSize="20sp" />

        <com.bytedance.sdk.openadsdk.core.widget.TTRatingBar
            android:id="@+id/tt_rb_score_backup"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tt_full_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:textColor="#ff333333"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tt_comment_backup"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="50dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tt_comment_num_backup"
            android:textColor="#ff93959a"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tt_full_ad_download"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/tt_reward_video_download_btn_bg"
            android:gravity="center"
            android:text="@string/tt_video_download_apk"
            android:textColor="@color/tt_white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
