<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tt_full_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tt_full_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.bytedance.sdk.openadsdk.component.reward.view.RatioImageView
            android:id="@+id/tt_ratio_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tt_ad_logo"
            android:layout_width="32dp"
            android:layout_height="12dp"
            android:layout_alignBottom="@+id/tt_ratio_image_view"
            android:drawableStart="@drawable/tt_ad_logo_reward_full"
            android:drawableLeft="@drawable/tt_ad_logo_reward_full"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/tt_ad_logo_txt"
            android:textColor="#b7b7b7"
            android:textSize="7sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tt_video_reward_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/tt_download_bar_background_new"
        android:gravity="center_vertical"
        android:paddingLeft="15dp">

        <com.bytedance.sdk.openadsdk.core.widget.TTRoundRectImageView
            android:id="@+id/tt_reward_ad_icon"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/tt_reward_ad_icon"
            android:layout_toRightOf="@+id/tt_reward_ad_icon"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tt_reward_ad_appname"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxWidth="153dp"
                android:singleLine="true"
                android:text="绝地求生刺激战场"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.bytedance.sdk.openadsdk.core.widget.TTRatingBar
                    android:id="@+id/tt_rb_score"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tt_comment_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:maxWidth="63dp"
                    android:singleLine="true"
                    android:text="@string/tt_comment_num"
                    android:textColor="#4a4a4a"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tt_reward_ad_download"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/tt_download_corner_bg"
            android:gravity="center"
            android:text="@string/tt_video_download_apk"
            android:textColor="@color/tt_white"
            android:textSize="17sp" />
    </RelativeLayout>
</RelativeLayout>
